加上了拓扑排序

--- a/图数据结构实现（邻接矩阵与邻接表）.md
+++ b/图数据结构实现（邻接矩阵与邻接表）.md
@@ -635,7 +635,116 @@ int main() {
 
 ## 二、代码模块拆分解释（含对应代码）
 
-### 1. 定位顶点函数（查找顶点在图中的下标）
+### 1. 拓扑排序算法（`TopologicalSort_Kahn`）
+
+拓扑排序是对 **有向无环图（DAG）** 的顶点进行排序，使得对图中每一条有向边 `(u, v)`，顶点 `u` 都排在顶点 `v` 之前。本项目采用经典的 **Kahn 算法** 实现，并通过创建 **逆邻接表** 来优化入度计算，效率更高。
+
+**对应代码**：
+
+```cpp
+// 拓扑排序（仅支持有向图DG/DN）
+bool TopologicalSort_Kahn(ALGraph& AL) {
+    // 1. 检查图类型：仅支持有向图（DG/DN）
+    if (AL.kind != DG && AL.kind != DN) {
+        cout << "\n拓扑排序仅支持有向图（DG/DN），当前图类型不支持！" << endl;
+        return false;
+    }
+
+    int vexnum = AL.vexnum;
+    int* inDegree = new int[vexnum];  // 存储每个顶点的入度
+    queue<int> zeroInQueue;           // 存储入度为0的顶点下标
+    vector<char> topoSeq;             // 存储拓扑排序结果
+
+    // 2. 计算所有顶点的入度（复用逆邻接表，效率更高）
+    ALGraph invAL;                    // 临时逆邻接表
+    ALGraphToInverse(AL, invAL);      // 生成逆邻接表
+    for (int i = 0; i < vexnum; i++) {
+        inDegree[i] = InDegree_InvALGraph(invAL, i);  // 逆邻接表长度=入度
+        if (inDegree[i] == 0) {
+            zeroInQueue.push(i);  // 入度为0的顶点入队
+        }
+    }
+
+    // 3. 执行Kahn算法核心逻辑
+    while (!zeroInQueue.empty()) {
+        int u = zeroInQueue.front();  // 取出入度为0的顶点u
+        zeroInQueue.pop();
+        topoSeq.push_back(AL.vertices[u].data);  // 加入拓扑序列
+
+        // 遍历u的所有邻接顶点v，将v的入度减1（u已被剥离，v的前驱减少1）
+        ArcNode* p = AL.vertices[u].firstarc;
+        while (p != NULL) {
+            int v = p->adjvex;
+            if (--inDegree[v] == 0) {  // v的入度变为0，加入队列
+                zeroInQueue.push(v);
+            }
+            p = p->nextarc;
+        }
+    }
+
+    // 4. 检测是否有环（拓扑序列长度 < 顶点数 → 存在环）
+    if (topoSeq.size() != vexnum) {
+        cout << "\n该有向图存在环，无法进行拓扑排序！" << endl;
+        delete[] inDegree;
+        DestroyALGraph(invAL);  // 销毁临时逆邻接表，避免内存泄漏
+        return false;
+    }
+
+    // 5. 输出拓扑排序结果
+    cout << "\n拓扑排序结果：";
+    for (size_t i = 0; i < topoSeq.size(); i++) {
+        if (i > 0) cout << " -> ";
+        cout << topoSeq[i];
+    }
+    cout << endl;
+
+    // 6. 释放资源
+    delete[] inDegree;
+    DestroyALGraph(invAL);
+    return true;
+}
+```
+
+**逻辑解析**：
+
+1.  **检查图类型**：拓扑排序是针对有向图的操作，因此首先检查 `AL.kind` 是否为 `DG` 或 `DN`。
+2.  **高效计算入度**：
+    - 传统方法计算一个顶点的入度需要遍历整个邻接表，时间复杂度为 O(V+E)。
+    - **优化**：我们先通过 `ALGraphToInverse` 函数创建一个临时的 **逆邻接表** `invAL`。在逆邻接表中，每个顶点的邻接表长度恰好就是其 **入度**。
+    - 这样，计算所有顶点入度的总时间复杂度从 O(V*(V+E)) 降低到创建逆邻接表的 O(V+E) + 遍历获取入度的 O(V)，效率显著提升。
+    - 计算完入度后，将所有入度为 0 的顶点入队 `zeroInQueue`。
+3.  **Kahn 算法核心循环**：
+    - 当队列不为空时，从队首取出一个入度为 0 的顶点 `u`。
+    - 将 `u` 加入拓扑序列 `topoSeq`。
+    - 遍历 `u` 的所有邻接顶点 `v`（即 `u` 指向的顶点），并将它们的入度减 1。这相当于在图中“拿掉”了顶点 `u` 及其所有出边。
+    - 如果在减 1 后，顶点 `v` 的入度变为 0，则说明 `v` 的所有前驱节点都已被处理，此时将 `v` 加入队列。
+4.  **环路检测**：
+    - 循环结束后，检查 `topoSeq` 中的顶点数量是否等于图的顶点总数 `vexnum`。
+    - 如果不相等，说明图中存在环路，导致部分顶点入度始终无法变为 0，无法加入队列。此时拓扑排序失败。
+5.  **输出与资源释放**：
+    - 如果排序成功，则打印 `topoSeq` 中的结果。
+    - 最后，必须释放动态分配的 `inDegree` 数组和为 `invAL` 创建的所有 `ArcNode` 节点（通过 `DestroyALGraph`），避免内存泄漏。
+        return false; // 存在环
+    }
+    return true; // 排序成功
+}
+```
+
+**分析**：
+
+- **功能**：对有向无环图（DAG）进行拓扑排序，并输出排序序列。如果图有环，则报告错误。
+- **参数**：`ALGraph& AL`（邻接表表示的图）。
+- **逻辑**：
+    1. **检查图类型**：确保是`DG`（有向图）或`DN`（有向网）。
+    2. **计算入度**：创建一个`inDegree`数组，遍历整个邻接表，统计每个顶点的入度。
+    3. **初始化队列**：将所有入度为 0 的顶点加入队列。
+    4. **循环处理**：
+        - 从队列中取出一个顶点 `u` 并输出。
+        - 遍历 `u` 的所有邻接点 `v`，将它们的入度减 1。
+        - 如果 `v` 的入度变为 0，则将其加入队列。
+    5. **检查环**：如果输出的顶点数小于图的总顶点数，说明图中有环，排序失败。
+
+### 2. 定位顶点函数（查找顶点在图中的下标）
 
 #### （1）`LocateVex(MGraph& G, char v)`
 
